--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -28,17 +29,23 @@ body {
 }
 
 /* ************************************sticker*************************** */
-.sticker {
+.sticker-div {
     position: fixed;
-    height: 250px;
+    height: 100vh;
     width: 50px;
     z-index: 100;
-    margin-top: 35vh;
+    background-color: transparent;
+}
+
+.sticker{
+    height: 250px;
+    width: 100%;
     background-color: rgba(204, 7, 204, 0.57);
     border-radius: 5px;
     border-bottom-left-radius: 0px;
     border-top-left-radius: 0px;
-}
+} 
+
 
 .social {
     color: black;
@@ -47,6 +54,7 @@ body {
 
 /* ************************************banner*************************** */
 .banner {
+
     /* background-image: url('images/banner.jpg');
     background-size: cover; */
     height: 12rem;
@@ -143,3 +151,17 @@ body {
     background: rgb(156, 1, 156);
     background: linear-gradient(to right, #692f82,rgb(114, 1, 114)); 
 }
+
+/* **************************************Skills***************************** */
+
+.skill {
+    height: 125px;
+    border-radius: 14px;
+    width: 190px;
+     margin: auto;
+     overflow: hidden;
+}
+.skill-img{
+    object-fit: contain;
+}
+
