--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,7 +79,7 @@ body {
 }
 
 .profile {
-    background-image: url('images/profile.jpg');
+    background-image: url('images/profile-new.jpg');
     background-size: contain;
     height: 120px;
     width: 120px;
